# kociemba

./: .gitignore  CMakeLists.txt  choix.txt  coord.cpp  coord.hpp  cube-defs.hpp  cube.cpp  cube.hpp  cubie.cpp  cubie.hpp  facelet.cpp  facelet.hpp  main  main.cpp  makefile  prog  tad.txt  test.py
prog.dSYM/Contents/Resources/DWARF/: prog
src/: CMakeLists.txt  app.cpp  coord.cpp  cube-defs.cpp  cube.cpp  kociemba.cpp  main.c  main.cpp  stickers.cpp
src/inc/: app.hpp  coord.hpp  cube-defs.hpp  cube-impl.hpp  cube.hpp  cubie.hpp  kociemba.hpp  scrambl.hpp  scramble.hpp  stickers.hpp
tad/: cube.txt  face.txt
